# AI-Notetaker-Finance

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  COGNIVAULT_INTEGRATION.md  MIGRATION_PLAN.md  README.md
backend/: .dockerignore  .env.example  .env.supabase  Dockerfile  Dockerfile.worker  Procfile  SQLITE_MIGRATION.md  alembic.ini  docker-compose.yml  fly.toml  litestream.yml  nixpacks.toml  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: dependencies.py  main.py
backend/app/api/v1/: admin.py  analysis.py  auth.py  auth_native.py  cognivault.py  deals.py  deliverables.py  documents.py  health.py  integrations.py  internal.py  meetings.py  meetings_upload.py  orgs.py  qa.py  recall_webhooks.py  router.py  transcripts.py  webhooks.py
backend/app/api/v1/internal/: __init__.py  _common.py  bots.py  calendar.py  ingest.py  status.py  transcription.py
backend/app/api/v1/partner/: auth.py  router.py
backend/app/api/v1/store/: __init__.py  _common.py  bot_sessions.py  dashboard.py  deals.py  documents.py  files.py  meetings.py  orgs.py  router.py  transcripts.py
backend/app/auth/: __init__.py  passwords.py  provisioning.py  tokens.py
backend/app/core/: config.py  database.py  events.py  exceptions.py  logging.py  middleware.py  rate_limit.py  security.py  security_headers.py
backend/app/db/: __init__.py  audit.py  base.py  deps.py  engine.py  migrate_from_supabase.py  models.py  schema.py  scope.py  vectors.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py  0002_add_password_hash.py  0003_deal_vdr_connections.py
backend/app/integrations/: inngest.py  oauth_flow.py
backend/app/integrations/aws/: cognito.py  s3.py  sqs.py
backend/app/integrations/cognivault/: __init__.py  oauth.py
backend/app/integrations/deepgram/: client.py  config.py  processor.py
backend/app/integrations/google/: __init__.py  calendar_client.py  oauth.py
backend/app/integrations/microsoft/: __init__.py  oauth.py
backend/app/integrations/outlook/: calendar_sync.py  graph_client.py
backend/app/integrations/recall/: client.py
backend/app/integrations/slack/: app.py  events.py  notifications.py
backend/app/integrations/supabase/: auth.py
backend/app/integrations/teams/: bot_framework.py  graph_client.py  webhooks.py
backend/app/integrations/zoom/: api_client.py  bot.py  oauth.py  urls.py  webhooks.py
backend/app/llm/: chunking.py  claude_provider.py  fireworks_provider.py  gemini_provider.py  guardrails.py  openai_provider.py  provider.py  router.py
backend/app/llm/prompts/: base.py  buyer_call.py  diligence.py  financial_review.py  management_presentation.py  qa.py  qoe.py  summarization.py
backend/app/models/: __init__.py  analysis.py  audit_log.py  base.py  deal.py  deal_membership.py  document.py  embedding.py  integration_credential.py  meeting.py  meeting_bot_session.py  meeting_participant.py  org_membership.py  organization.py  transcript.py  transcript_segment.py  user.py
backend/app/realtime/: pubsub.py  sse.py
backend/app/schemas/: analysis.py  audit.py  common.py  deal.py  document.py  integration.py  meeting.py  organization.py  qa.py  transcript.py  user.py
backend/app/services/: analysis_service.py  audit_service.py  auth_service.py  bot_service.py  deal_service.py  deliverable_service.py  document_service.py  embedding_service.py  integration_service.py  meeting_service.py  oauth_tokens.py  org_service.py  qa_service.py  transcript_service.py
backend/app/storage/: local.py
backend/app/tasks/: analysis.py  base.py  celery_app.py  embedding.py  integrations.py  meeting_bot.py  notifications.py  pipelines.py  transcription.py
backend/app/utils/: audio.py  file_processing.py  time_utils.py
backend/scripts/: cutover.sh  mint_partner_key.py  seed.py  start.sh
backend/tests/: conftest.py  factories.py
backend/tests/e2e/: test_integration_pipeline.py
backend/tests/integration/test_api/: test_deals_api.py  test_integrations_api.py
backend/tests/unit/: test_core.py  test_schemas.py  test_scope_guard_lint.py  test_security_fixes.py  test_utils.py
backend/tests/unit/test_auth/: test_auth.py  test_password_auth.py
backend/tests/unit/test_cognivault/: conftest.py  test_connect_flow.py
backend/tests/unit/test_db/: test_db_layer.py  test_migration_transforms.py
backend/tests/unit/test_integrations/: test_bot_service.py  test_calendar_sync.py  test_deepgram.py  test_integration_service.py  test_recall_client.py  test_slack_notifications.py  test_webhook_handlers.py
backend/tests/unit/test_internal/: test_oauth_and_status.py  test_pipeline.py  test_recall_webhook.py
backend/tests/unit/test_llm/: test_chunking.py  test_guardrails.py  test_router.py  test_routing_validation.py
backend/tests/unit/test_partner/: conftest.py  test_partner_api.py  test_partner_sharing.py
backend/tests/unit/test_realtime/: conftest.py  test_pubsub.py
backend/tests/unit/test_services/: test_all_services.py  test_analysis_service.py  test_deal_service.py  test_deliverable_service.py  test_qa_service.py
backend/tests/unit/test_storage/: conftest.py  test_files_api.py  test_local.py
backend/tests/unit/test_store/: conftest.py  test_analysis_deliverable_scoping.py  test_bot_sessions.py  test_dashboard.py  test_deals.py  test_documents.py  test_e2e_flow.py  test_meetings.py  test_orgs.py  test_qa_ask_scope.py  test_qa_history.py  test_security_fixes.py  test_transcripts.py
backend/tests/unit/test_stress/: test_concurrency.py
docs/: api-guide.md  architecture.md  deployment.md  development.md  security.md
frontend/: .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  (+1 more)
(+343 files in other folders)
