[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognisuite-backend"
version = "0.2.0"
description = "CogniSuite - slim LLM + webhook worker"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Supabase (Postgres + Auth + Storage) — being migrated out; kept until cutover
    "supabase>=2.8.0",

    # SQLite data layer (migration target: worker-owned DB)
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "sqlite-vec>=0.1.6",        # vec0 virtual table + server-side KNN
    "authlib>=1.3.0",           # OAuth (Google/Microsoft) for self-hosted auth
    "itsdangerous>=2.2.0",      # Starlette SessionMiddleware (OAuth state)

    # Auth / crypto
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",     # Argon2id hashing for email/password accounts
    "httpx>=0.27.0",

    # LLM providers
    "anthropic>=0.34.0",       # opt-in only; see PREMIUM_LLM_ENABLED
    "tiktoken>=0.7.0",         # token counting for chunkers

    # Transcription + bots
    "deepgram-sdk>=3.5.0",

    # Utilities
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "python-dateutil>=2.9.0",
    "tenacity>=8.5.0",

    # Per-user rate limiting (LLM endpoints — cost-DoS protection)
    "slowapi>=0.1.9",

    # File processing (for docx deliverable generation + doc uploads)
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",

    # Observability
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# TCH (typing-only import blocks) is deliberately not selected: FastAPI
# Depends, SQLAlchemy Mapped, and Pydantic models all evaluate annotations at
# runtime, so mechanically moving imports under TYPE_CHECKING breaks them.
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "ICN", "PIE", "T20", "SIM"]
ignore = ["S101", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# Test fixtures legitimately embed fake passwords/tokens; bandit's
# hardcoded-secret heuristics (S105/S106/S107) are pure noise on test data.
"tests/**" = ["S105", "S106", "S107"]
# The concurrency stress test prints a throughput line as useful diagnostics.
"tests/unit/test_stress/test_concurrency.py" = ["T201"]
# Ops/CLI scripts print to stdout by design — that's their interface.
"scripts/**" = ["T201"]
# The dev seed embeds long, realistic transcript/document text as inline data
# literals; wrapping them to 100 cols would mangle the data, not improve it.
"scripts/seed.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

# NOTE: the blanket ignore_errors over app.llm.* / app.services.* /
# app.integrations.* was removed once those packages type-checked clean — they
# are now held to the same bar as the rest of app/. Untyped third-party imports
# (sqlite_vec, jose) are suppressed inline at the import site.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
